NT548_LAB/final/CLoudformation/app/k8s/infrastructure/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: todo-namespace
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb
